# SolidityAddressMapper

./: .gitignore  BeerBar.json  LICENSE  README.md  notes.md  package-lock.json  package.json  pyproject.toml  requirements.txt
Contracts/: BeerBar.sol  InstructionsTest.sol  SongVotingBar.sol  mythril.config.json
src/: BeerToken.sol  main.py  mapper.py  solidity_ast_printer.py
src/solidity_address_mapper/: mapper.py
tests/: README.md  requirements.txt  test_artithmetic_contract.py  test_artithmetic_contract_compiler0826.py  test_beerbar.csv  test_beerbar.py  test_etherlotto_compiler0517.py  test_etherlotto_compiler0612.py  test_etherlotto_compiler076.py  test_instruction_index.csv  test_instruction_index.py  test_instruction_index2.csv  test_instruction_index2.py  test_mapper.csv  test_mapper.py
tests/compiler0517/compiler_config_files/: config_EtherLotto.json
tests/compiler0612/compiler_config_files/: config_EtherLotto.json
tests/compiler076/compiled/: EtherLotto.json  EtherLotto.rt.hex
tests/compiler076/compiler_config_files/: config_EtherLotto.json
tests/compiler0826/: README.md  compiler_config.json
tests/compiler0826/compiled/: ArtithmeticTestContract.hex  ArtithmeticTestContract.json  BeerBar.hex  BeerBar.json
tests/compiler0826/compiler_config_files/: config_artihmetic_test_contract.json  config_beerbar.json
tests/compiler0826/compiller_config_files/: config_artihmetic_test_contract.json  config_beerbar.json
tests/quick-solc/: README.md  output.json
workdir/: reconstructor.py
workdir/quick-solc/: README.md  qsolc.py
(+101 files in other folders)
